--- a/CSS-fundamentals/card.html
+++ b/CSS-fundamentals/card.html
@@ -8,10 +8,11 @@
 
     <div class="card">
 
-        <h1>Nisl suscipit adipiscing bibendum est ultricies integer quis auctor.</h1>
+        <h1>Nisl suscipit <span class="accent-color">adipiscing bibendum</span> est ultricies integer quis auctor.</h1>
         <p>Netus et malesuada fames ac. <a href="#">Sed cras ornare arcu dui vivamus</a>. <strong>Elementum integer enim neque</strong> volutpat ac tincidunt vitae semper.</p>
         <p class="links">
-            <a href="#">contact me</a> <a href="#">learn more about me</a>
+            <a href="#">contact me</a> 
+            <a href="#">learn more about me</a>
         </p>
 
     </div>
