Creating my 1st blog post html and CSS per scrimba module. Updating index html to point to blog post and adding css

--- a/CSS-fundamentals/card.html
+++ b/CSS-fundamentals/card.html
@@ -8,8 +8,8 @@
 
     <div class="card">
 
-        <h1>Nisl suscipit <span class="accent-color">adipiscing bibendum</span> est ultricies integer quis auctor.</h1>
-        <p>Netus et malesuada fames ac. <a href="#">Sed cras ornare arcu dui vivamus</a>. <strong>Elementum integer enim neque</strong> volutpat ac tincidunt vitae semper.</p>
+        <h1>This page was created while learning about various <span class="accent-color">block and inline elements</span> and their behaviors.</h1>
+        <p>Turns out, pretty useless information. I've seen better<a href="#"> educational material on PornHub</a>. <strong>Hell I should be looking for a job with them</strong> if I knew what was good for me.</p>
         <p class="links">
             <a href="#">contact me</a> 
             <a href="#">learn more about me</a>
