--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="column">
                     <ol>
-                        <li class="nav-item"><a href="CSS-fundamentals/card.html">My Card</a></li>
+                        <li class="nav-item"><a href="CSS-fundamentals/blog-post.html">My 1st blog post!</a></li>
                     </ol>
                 </div>
 
@@ -29,7 +29,7 @@
         </main>
 
         <footer>
-            <p class="copyright">&#169; Michael Corn's Responsive bootcamp yalllll</p> 
+            <p class="copyright">&#169;2020 A Growing Michael, Inc</p> 
         </footer>
 
     </body>
