--- a/CSS-fundamentals/card.html
+++ b/CSS-fundamentals/card.html
@@ -10,10 +10,13 @@
 
         <h1>This page was created while learning about various <span class="accent-color">block and inline elements</span> and their behaviors.</h1>
         <p>Turns out, pretty useless information. I've seen better<a href="#"> educational material on PornHub</a>. <strong>Hell I should be looking for a job with them</strong> if I knew what was good for me.</p>
-        <p class="links">
-            <a href="#">contact me</a> 
-            <a href="#">learn more about me</a>
-        </p>
+        <div class="nav">
+            <p class="links">
+                <a class="button" href="#">contact me</a> 
+                <a class="button" href="#">learn more about me</a>
+            </p>
+        </div>
+
 
     </div>
 
