Creating compound-selectors html and CSS, working on compound selectors module

--- a/CSS-fundamentals/card.html
+++ b/CSS-fundamentals/card.html
@@ -9,7 +9,7 @@
     <div class="card">
 
         <h1>This page was created while learning about various <span class="accent-color">block and inline elements</span> and their behaviors.</h1>
-        <p>Turns out, pretty useless information. I've seen better<a href="#"> educational material on PornHub</a>. <strong>Hell I should be looking for a job with them</strong> if I knew what was good for me.</p>
+        <p>Turns out, pretty useless information. I've seen better<a href="#"> educational material on eBaum's World</a>. <strong>Hell I should be looking for a job with them</strong> if I knew what was good for me.</p>
         <div class="nav">
             <p class="links">
                 <a class="button" href="#">contact me</a> 
