Wrapping up my part of the Compound Selectors module, importing google font Open Sans

--- a/CSS-fundamentals/compound-selectors.html
+++ b/CSS-fundamentals/compound-selectors.html
@@ -4,6 +4,7 @@
     <head>
         <title>Compound selectors? Hardly knew hers!</title>
         <link href="CSS/compound-selectors.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     </head>
 
     <body>
@@ -13,8 +14,8 @@
         </header>
 
         <section class="section-one">
-            <h2>Section one title.</h2>
-            <p>Compound selectors are a challenging concept for beginner programmers. It takes a <a href="">keen eye for magic</a> in order to successfully use them. Stay Tuned for more!</p>
+            <h2>Start of my first section!</h2>
+            <p>Compound selectors are a challenging concept for beginner programmers. It takes a <a href="">keen eye for magic</a> in order to successfully use them. Stay tuned for more!</p>
             <div class="nav">
                 <p class="links">
                     <a class="btn" href="#">contact me</a> 
@@ -24,8 +25,8 @@
         </section>
 
         <section class="section-two">
-            <h2>Section two title.</h2>
-            <p>Oh there is more? I'm not great at making up content on the spot. Well, I guess learning <a href="">how to code websites</a> can be difficult. But the reward is unlimited knowledge!</p>
+            <h2>Another section, I guess!</h2>
+            <p>Oh, there is more? Gee I'm not great at making up content on the spot. Well... I guess learning <a href="">how to code websites</a> can be difficult. But the reward is unlimited power!</p>
             <div class="nav">
                 <p class="links">
                     <a class="btn" href="">learn more about me</a>
