Updates that I can't remember, because i forgot to push them up months ago. Also testing watch video link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="column">
                     <ol>
                         <li class="nav-item"><a href="CSS-fundamentals/blog-post.html">My 1st blog post!</a></li>
+                        <li class="nav-item"><a href="CSS-fundamentals/compound-selectors.html">Compound selectors self punishment</a></li>
                     </ol>
                 </div>
 
