--- a/CSS-fundamentals/compound-selectors.html
+++ b/CSS-fundamentals/compound-selectors.html
@@ -4,7 +4,7 @@
     <head>
         <title>Compound selectors? Hardly knew hers!</title>
         <link href="CSS/compound-selectors.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet" />
     </head>
 
     <body>
