--- a/CSS-fundamentals/css-fundamentals.html
+++ b/CSS-fundamentals/css-fundamentals.html
@@ -20,7 +20,7 @@
                 <h2>I've learned a lot since the start!</h2>
                 <img src="images/barcelona-skyline.jpg" />
                 <p>Wow, what a wild ride. Who could have guessed that writing HTML and CSS could be <em>this fun</em>. Thank you for <a href="">stopping by</a> and checking in on my progress!</p>
-                <p><a class="nounderline" href=""><span class="video-buttom">&#9658</a></span><a href="">Watch the video!</a></p>
+                <p><a href="">Watch the video</a><a class="nounderline" href=""><span class="video-buttom">&#9658</a></span>to learn more!</p>
             </div>
         </section>
 
@@ -29,7 +29,7 @@
                 <h2>Looking to the horizon...</h2>
                 <p>You know what they say, when one door closes another door opens, at least when it comes to passing gas. It's time to move on to <a href="">the next assignment</a>!</p>
                 <p>The next module is all about thinking responsively and responsibly. It's probably the most important part of <strong>contemporary web development</strong>. Let's take a look together, eh? Come on!</p>
-                <div>
+                <div class="btns">
                     <p class="links">
                         <a class="btn default">contact me</a>
                         <a class="btn mod">back home</a>
