Updates and finishing CSS-fundamentals section

--- a/CSS-fundamentals/css-fundamentals.html
+++ b/CSS-fundamentals/css-fundamentals.html
@@ -29,10 +29,10 @@
                 <h2>Looking to the horizon...</h2>
                 <p>You know what they say, when one door closes another door opens, at least when it comes to passing gas. It's time to move on to <a href="">the next assignment</a>!</p>
                 <p>The next module is all about thinking responsively and responsibly. It's probably the most important part of <strong>contemporary web development</strong>. Let's take a look together, eh? Come on!</p>
-                <div class="btns">
-                    <p class="links">
-                        <a class="btn default">contact me</a>
-                        <a class="btn mod">back home</a>
+        <!--    <div class="btns">
+                   <p class="links"> -->
+                        <a href="#" class="btn default">contact me</a>
+                        <a href="/index.html" class="btn mod">back home</a>
                     </p>
                 </div>
             </div>
