--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <ol>
                         <li class="nav-item"><a href="CSS-fundamentals/blog-post.html">My 1st blog post!</a></li>
                         <li class="nav-item"><a href="CSS-fundamentals/compound-selectors.html">Compound selectors self punishment</a></li>
+                        <li class="nav-item"><a href="CSS-fundamentals/CSS-fundamentals.html">My CSS Fundamentals project</a></li>
                     </ol>
                 </div>
 
