Updating CSS fundamentals layout based on CSS units and percentages module

--- a/CSS-fundamentals/css-fundamentals.html
+++ b/CSS-fundamentals/css-fundamentals.html
@@ -10,13 +10,13 @@
     <body>
 
         <header>
-            <div class="center">
+            <div class="container">
                 <h1>CSS is a lot of fun!</h1>
             </div>
         </header>
 
         <section class="section-one">
-            <div class="center">    
+            <div class="container">    
                 <h2>I've learned a lot since the start!</h2>
                 <img src="images/barcelona-skyline.jpg" />
                 <p>Wow, what a wild ride. Who could have guessed that writing HTML and CSS could be <em>this fun</em>. Thank you for <a href="">stopping by</a> and checking in on my progress!</p>
@@ -25,7 +25,7 @@
         </section>
 
         <section class="section-two">
-            <div class="center">
+            <div class="container">
                 <h2>Looking to the horizon...</h2>
                 <p>You know what they say, when one door closes another door opens, at least when it comes to passing gas. It's time to move on to <a href="">the next assignment</a>!</p>
                 <p>The next module is all about thinking responsively and responsibly. It's probably the most important part of <strong>contemporary web development</strong>. Let's take a look together, eh? Come on!</p>
